# WebServerSchemas

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.c
Client/headers/: List.h  client.h
Client/source/: List.c  client.c
Server/: CMakeLists.txt  main.c
Server/errors/: NotFound.html
Server/headers/: List.h  client.h  server.h  structs.h
Server/source/: List.c  client.c  server.c
Server/tests/: test1.html  test2.txt
